--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "start:pwa": "ng build && http-server -p 8080 -c-1 dist/hdlt"
+    "start:pwa": "ng build --configuration production && http-server -p 8080 -c-1 dist/hdlt"
   },
   "private": true,
   "dependencies": {
